# fz-imrich

./: Cargo.toml
src/: main.rs
src/frames/: 0000.icon  0001.icon  0002.icon  0003.icon  0004.icon  0005.icon  0006.icon  0007.icon  0008.icon  0009.icon  0010.icon  0011.icon  0012.icon  0013.icon  0014.icon  0015.icon  0016.icon  0017.icon  0018.icon  0019.icon  0020.icon  0021.icon  0022.icon  0023.icon  0024.icon  0025.icon  0026.icon  0027.icon  0028.icon  0029.icon  0030.icon  0031.icon  0032.icon  0033.icon  0034.icon  0035.icon  0036.icon  0037.icon  0038.icon  0039.icon  (+17 more)
